# autopedia

./: README.md  app.py  pyproject.toml
templates/: base.html  edit_entry.html  entries.html  entry_view.html  generate.html  login.html  new_entry.html  register.html
